--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                 <div id="sequenceToggles" class="dropdownContent">
                     <button class="toggleButton" id="fast">fast</button>
                     <button class="toggleButton" id="chill">chill</button>
-                    <button class="toggleButton" id="space">vibes</button>
+                    <button class="toggleButton" id="vibes">vibes</button>
                 </div>
             </div>
         </div>
