I believe we are finished?

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
 </head>
 
 <body>
+    <div id="mobile-warning" style="display: none; margin-top: auto; height: 100vh; text-align: center; padding: 50px; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+        <h1>the synth website</h1>
+        <p>This website is best viewed on a desktop. Please switch to a desktop device or return to fullscreen for the full experience.</p>
+    </div>
     <!-- Loading Screen -->
-    <div id="loading-screen" style="height: 100vh">
-        <h1 id="logo">the synth website</h1>
+    <div id="loading-screen" style="height: 100vh; display: none; display: flex; justify-content: center; align-items: center; flex-direction: column;">
+        <h1 id="logo">the synth website</h1> 
         <h3 id="loading-text">0%</h3>
     </div>
     <div id="main-content" style="display: none">
